# radionets

./: .pre-commit-config.yaml  CHANGES.rst  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml  pypi-publish.yml
configs/: radionets_default_train_config.toml
docs/: index.rst
docs/_static/css/: radionets.css
docs/changes/: 178.feature.rst  178.maintenance.rst  187.feature.rst  190.maintenance.rst  191.maintanence.rst  192.feature.rst  193.optimization.rst  194.bugfix.rst  194.maintenance.2.rst  194.maintenance.rst  195.feature.rst  196.maintenance.rst  197.feature.rst  198.feature.rst  199.feature.2.rst  199.feature.rst  200.maintenance.2.rst  200.maintenance.rst  209.bugfix.rst
docs/developer-guide/: contributions.md
radionets/dl_framework/: data.py  loss_functions.py  model.py
radionets/dl_framework/architectures/: res_exp.py
src/radionets/: __init__.py
src/radionets/architecture/: __init__.py  archs.py  blocks.py  layers.py  loss.py
src/radionets/core/: __init__.py  callbacks.py  data.py  learner.py  logging.py  loss_functions.py  model.py  utils.py
src/radionets/evaluation/: contour.py  dynamic_range.py  feature.py  jet_angle.py  jets.py  train_inspection.py  utils.py
src/radionets/evaluation/scripts/: start_evaluation.py
src/radionets/io/: __init__.py  _callbacks.py  _logging.py  _misc.py  data.py  train_config.py
src/radionets/io/training/: __init__.py  _accelerators.py  _logging.py  _training.py
src/radionets/plotting/: __init__.py  _puor.py  hist.py  inspection.py  utils.py  visualization.py
src/radionets/simulations/: gaussians.py  utils.py  uv_plots.py  uv_simulations.py
src/radionets/tools/: cli.py  model_cli.py  quickstart.py
src/radionets/training/: __init__.py  trainers.py  utils.py
src/radionets/training/scripts/: start_training.py
src/radionets/utils/: _paths.py  carbon_tracking.py  codecarbon.py
tests/: test_architecture_layers.py  test_evaluation.py
