[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "radionets"
dynamic = ["version"]
description = "Imaging radio interferometric data with neural networks"
readme = "README.md"
authors = [
  { name = "radionets Developers" },
]
maintainers = [
  { name = "Kevin Schmitz", email = "kevin2.schmitz@tu-dortmund.de" },
  { name = "Anno Knierim", email = "anno.knierim@tu-dortmund.de" },
]
license = { text = "MIT" }
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Development Status :: 4 - Beta",
]

requires-python = ">=3.11"

dependencies = [
    "astropy>=7.1.0",
    "comet-ml>=3.50.0",
    "fastai>=2.8.2",
    "h5py>=3.14.0",
    "kornia>=0.8.1",
    "natsort>=8.4.0",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "pytorch-msssim>=1.0.0",
    "rich-click>=1.8.9",
    "rich>=14.1.0",
    "scikit-image>=0.25.2",
    "toml>=0.10.2",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
]

[project.urls]
Homepage = "https://github.com/radionets-project"
Repository = "https://github.com/radionets-project/radionets"

[project.optional-dependencies]
plot = [
    "matplotlib>=3.10.5",
]

[dependency-groups]
tests = [
  "coverage>=7.10.2",
  "h5py>=3.14.0",
  "pytest >= 7.0",
  "pytest-cov>=6.2.1",
  "pytest-order>=1.3.0",
  "pytest-xdist>=3.8.0",
  "restructuredtext-lint>=1.4.0",
  "tomli>=2.2.1",
]

docs = [
  "graphviz>=0.21",
  "ipython>=9.4.0",
  "jupyter>=1.1.1",
  "linkify-it-py>=2.0.3",
  "matplotlib",
  "myst-parser>=4.0.1",
  "nbsphinx>=0.9.7",
  "notebook>=7.4.5",
  "numpydoc>=1.9.0",
  "pydata-sphinx-theme>=0.16.1",
  "sphinx-autobuild>=2024.10.3",
  "sphinx-automodapi>=0.20.0",
  "sphinx-changelog>=1.6.0",
  "sphinx-copybutton>=0.5.2",
  "sphinx-design>=0.6.1",
  "sphinx-gallery >= 0.16.0",
  "sphinx-tippy>=0.4.3",
  "sphinx-togglebutton>=0.3.2",
  "sphinx>=8.1.3",
  "sphinxcontrib-bibtex>=2.6.5",
]

dev = [
  "ipython>=9.4.0",
  "jupyter>=1.1.1",
  "pre-commit>=4.2.0",
  {include-group = "tests"},
  {include-group = "docs"},
]

[project.scripts]
radionets-simulation = "radionets.simulations.scripts.simulate_images:main"
radionets-training = "radionets.training.scripts.start_training:main"
radionets-evaluation = "radionets.evaluation.scripts.start_evaluation:main"
radionets-quickstart = "radionets.tools.quickstart:quickstart"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/radionets/_version.py"

[tool.hatch.build.targets.wheel]
include = ["src/radionets"]

[tool.hatch.build.targets.wheel.sources]
"src/radionets" = "radionets"

[tool.hatch.build.targets.wheel.shared-data]
"configs" = "share/configs"

[tool.coverage.run]
omit = [
  "src/radionets/version.py",
  "src/radionets/_version.py",
  "docs/*",
]

[tool.coverage.xml]
output = "coverage.xml"

[tool.pytest.ini_options]
addopts = "--verbose"

[tool.towncrier]
    package = "radionets"
    directory = "docs/changes"
    filename = "CHANGES.rst"
    template = "docs/changes/template.rst"
    # let towncrier create proper links to the merged PR
    issue_format = "`#{issue} <https://github.com/radionets-project/radionets/pull/{issue}>`__"

    [tool.towncrier.fragment.feature]
        name = "New Features"
        showcontent = true

    [tool.towncrier.fragment.bugfix]
        name = "Bug Fixes"
        showcontent = true

    [tool.towncrier.fragment.api]
        name = "API Changes"
        showcontent = true

    [tool.towncrier.fragment.datamodel]
        name = "Data Model Changes"
        showcontent = true

    [tool.towncrier.fragment.optimization]
        name = "Refactoring and Optimization"
        showcontent = true

    [tool.towncrier.fragment.maintenance]
        name = "Maintenance"
        showcontent = true

    [[tool.towncrier.section]]
        name = ""
        path = ""

[tool.ruff]
target-version = "py311"
line-length = 88
extend-exclude = ["tests", "examples"]

[tool.ruff.lint]
extend-select = [
  "I",  # isort
  "E", # pycodestyle
  "F", # Pyflakes
  "UP", # pyupgrade
  "B", # flake8-bugbear
  "SIM", # flake8-simplify
]
ignore = ["B905", "UP038"]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"examples/**" = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["radionets"]
